tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__return_building__return_after_if.snap
---
source: tests/semantic/statement_building/return_building.rs
expression: test_ctx.namespace.func_ctx
---
funcs:
  0:
    name: do_something
    is_member: false
    is_static: false
    params:
      - label: ~
        name: param
        var_id: 0
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Float
    block:
      body:
        - If:
            main:
              condition:
                kind:
                  Identifier:
                    name: param
                    id: 0
                value_type:
                  Primitive: Bool
                range:
                  start: 0
                  end: 0
              block:
                body: []
                scope_id: 2
            else_ifs: []
            else_block: ~
        - Return:
            value:
              kind:
                FloatLiteral: 5
              value_type:
                Primitive: Float
              range:
                start: 0
                end: 0
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  do_something: 0
next_function_id: 1
