tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__return_building__return_in_if_else_if_else.snap
---
source: tests/semantic/statement_building/return_building.rs
expression: test_ctx.comp_state.func_ctx
---
funcs:
  0:
    name: do_something
    is_member: false
    is_static: false
    params:
      - label: ~
        name: if_param
        var_id: 0
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
      - label: ~
        name: if_else_param
        var_id: 1
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Float
    block:
      body:
        - If:
            main:
              condition:
                kind:
                  Identifier:
                    name: if_param
                    id: 0
                value_type:
                  Primitive: Bool
                range:
                  start: 0
                  end: 0
              block:
                body:
                  - Return:
                      value:
                        kind:
                          FloatLiteral: 5
                        value_type:
                          Primitive: Float
                        range:
                          start: 0
                          end: 0
                scope_id: 2
            else_ifs:
              - condition:
                  kind:
                    Identifier:
                      name: if_else_param
                      id: 1
                  value_type:
                    Primitive: Bool
                  range:
                    start: 0
                    end: 0
                block:
                  body:
                    - Return:
                        value:
                          kind:
                            FloatLiteral: 3
                          value_type:
                            Primitive: Float
                          range:
                            start: 0
                            end: 0
                  scope_id: 3
            else_block:
              body:
                - Return:
                    value:
                      kind:
                        FloatLiteral: 1
                      value_type:
                        Primitive: Float
                      range:
                        start: 0
                        end: 0
              scope_id: 4
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
static_functions: {}
global_functions:
  do_something: 0
